# sodap-mono

./: .gitignore  Anchor.toml  Cargo.toml  README.md  id.json  package-lock.json  package.json  run-single-test.sh  rust-toolchain.toml  start-validator.sh  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
programs/sodap/: Cargo.toml
programs/sodap/src/: error.rs  events.rs  lib.rs
programs/sodap/src/instructions/: admin.rs  loyalty.rs  mod.rs  product.rs  store.rs  user.rs  user_wallet.rs
programs/sodap/src/state/: admin.rs  loyalty.rs  mod.rs  product.rs  store.rs  user.rs
programs/sodap/src/utils/: auth.rs  mod.rs  pda.rs
sodap-mono/: .env  .gitignore  Anchor.toml  Anchor.toml.bak  Cargo.toml  README.md  REFUND_VERIFICATION.md  TEST_GUIDE.md  package-lock.json  package.json  run-devnet-tests.sh  start-validator.sh  tsconfig.json
sodap-mono/.cargo/: config.toml
sodap-mono/app/: README.md  index.html  jest.config.cjs  package-lock.json  package.json
sodap-mono/app/src/: App.tsx
sodap-mono/app/src/components/: WalletTest.tsx
sodap-mono/app/src/config/: wallets.ts
sodap-mono/app/src/contexts/: AnchorContext.context.ts  AuthContext.tsx  ProfileContext.tsx
sodap-mono/app/src/hooks/: useCart.ts  useLoyalty.ts  usePurchaseHistory.ts  useRefundTransaction.ts  useReturnRequests.ts  useStoreManager.ts  useTransaction.ts  useWalletConnect.ts
sodap-mono/programs/sodap/: Cargo.toml
sodap-mono/scripts/: fix-anchor-warnings.ts  run-anchor-test.sh  sync-idl.sh  test-anchor-program.ts  test-core-functionality.ts  validator-manager.sh
sodap-mono/tests/: admin.ts  core-functionality-test.ts  create_wallet.ts  fixed-admin-test.ts  fixed-product-test.ts  mvp-test.ts  payment.ts  product.ts  simple-admin-test.ts  simple-test.ts  solana-pay-checkout-test-minimal.ts  solana-pay-loyalty-test.ts  solana-pay-test.ts  store-only-test.ts  store.ts  user-story.txt  wallet-store-test.ts
sodap-mono/tests/mvp/: admin.test.ts  loyalty.test.ts  mvp-test.ts  store.test.ts
sodap-mono/tests/store/: mvp-store-test.ts  store.ts
sodap-mono/tests/utils/: devnet-utils.ts  test-setup.ts
sodap-mono/utils/: pda-helpers.ts  program-interface.ts
(+365 files in other folders)
