[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"

[profile.dev]
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
