[package]
name        = "sodap"
version     = "0.1.0"
edition     = "2021"
description = "Created with Anchor"

[lib]
name        = "sodap"
crate-type  = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
solana = []
anchor-debug = []
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl  = { version = "0.29.0", features = ["token", "token_2022"] }
borsh = "0.10.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
bytemuck_derive = "=1.8.1"
